fix qr dropdown menu cutoff in url share section

--- a/app/assets/stylesheets/urls.scss
+++ b/app/assets/stylesheets/urls.scss
@@ -334,7 +334,6 @@ table.dataTable tr.selected .fa-ellipsis-h {
   background-color: white;
   padding: 10px 20px;
   box-sizing: border-box;
-  overflow: hidden;
   color: black;
   &.off {
     height: 0;
